Bug 372988 - Importing image with with fractionals crashes KXStitch
Summary: Importing image with with fractionals crashes KXStitch
Status: RESOLVED FIXED
Alias: None
Product: KXStitch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Steve Allewell
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-27 09:20 UTC by Karl Ove Hufthammer
Modified: 2016-12-03 23:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2016-11-27 09:20:43 UTC
When importing an image and checking the ‘Use fractionals’ option in the import dialogue, KXStitch immediately crashes, with this error message:

  Segmentation fault (core dumped)

This happens every time I try to import an image using ‘Use fractionals’. If I *don’t* check ‘Use fractionals’, everything is working OK.
Comment 1 Steve Allewell 2016-11-27 22:07:36 UTC
I have tried a few images and some crash, some work as expected.  I will investigate.
Comment 2 Steve Allewell 2016-12-01 22:20:17 UTC
Git commit 26c1976aa57d581b0b6a4aaba8ee6b65c4e68ae7 by Steve Allewell.
Committed on 01/12/2016 at 22:13.
Pushed by sallewell into branch 'release-2.0.0'.

Fix for crashes during image import

Reworked color management between ImageMagick and QColor. Fixed
transparency handling and ignore color functions.

M  +1    -1    src/DocumentPalette.cpp
M  +17   -24   src/FlossScheme.cpp
M  +1    -1    src/FlossScheme.h
M  +15   -17   src/ImportImageDlg.cpp
M  +4    -4    src/ImportImageDlg.h
M  +13   -33   src/MainWindow.cpp

https://commits.kde.org/kxstitch/26c1976aa57d581b0b6a4aaba8ee6b65c4e68ae7
Comment 3 Steve Allewell 2016-12-03 23:24:47 UTC
Git commit 052266b1d5396c89d02be5e074b2730016ebd2ee by Steve Allewell.
Committed on 03/12/2016 at 23:23.
Pushed by sallewell into branch 'master'.

Fix for crashes during image import

Reworked color management between ImageMagick and QColor. Fixed
transparency handling and ignore color functions.

M  +1    -1    src/DocumentPalette.cpp
M  +17   -24   src/FlossScheme.cpp
M  +1    -1    src/FlossScheme.h
M  +15   -17   src/ImportImageDlg.cpp
M  +4    -4    src/ImportImageDlg.h
M  +13   -33   src/MainWindow.cpp

https://commits.kde.org/kxstitch/052266b1d5396c89d02be5e074b2730016ebd2ee