Fix for crashes during image import

Reworked color management between ImageMagick and QColor. Fixed
transparency handling and ignore color functions.

BUG: 372988